crates/oxc_react_compiler/tests/snapshots/error.todo.try-catch-with-throw.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo.try-catch-with-throw.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerStatement) Support ThrowStatement inside of try/catch", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 49, length: 9 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
