crates/oxc_react_compiler/tests/snapshots/error.typescript-this-param-in-compiled-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.typescript-this-param-in-compiled-function.ts
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerExpression) Handle ThisExpression expressions", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 247, length: 4 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
